<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/library_add"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_description"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_comment"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/book_author_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/book_pyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_pyear" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <Button
            android:id="@+id/book_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/book_submit"/>
    </FrameLayout>


</LinearLayout>